--- a/index.html
+++ b/index.html
@@ -1,2 +1,144 @@
-<script src='build/main.bundle.js'></script>
-Hello World
+<!DOCTYPE html>
+<html  lang="en">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<head>
+
+<meta charset="utf-8">
+<title>keyboard</title>
+<style media="screen">
+body {
+    background-color:#ebebe0;
+	font-family: 'Roboto', sans-serif;
+ }
+#keyboard {
+    display:inline-block;
+    padding:10px 30px;
+    border:1px ;
+    border-radius:2px;
+    background-color:#ffb3b3;
+    text-align:center;
+    box-shadow:5px 4px 4px #999;
+ }
+#keyboard div {
+    margin:10px 0;
+
+ }
+#space {
+    width:400px;
+ }
+
+#keyboard input {
+    box-shadow:2px 2px 2px #666;
+	padding-top : 5px;
+ }
+#keyboard input[type="text"] {
+    margin-top:10px;
+    border:2px solid #666;
+    border-radius:6px;
+	width:600px;
+	height : 30px;
+	margin-bottom: 20px;
+	font-family: 'Roboto', sans-serif;
+	font-size:20px;
+ }
+ #keyboard input[type="button"]{
+ padding:10px 30px 20px;
+ font-family: 'Roboto', sans-serif;
+ font-size: 25px;
+ background-color:#ff8080;
+ 
+ }
+ #keyboard input[type="reset"]{
+ padding:10px 30px 20px;
+ font-family: 'Roboto', sans-serif;
+ font-size: 20px;
+ background-color:#bf8040;
+ }
+</style>
+<h1><center> Keyboard </h1>
+<script>
+(function() {
+   'use strict';
+   var i,c;
+function init(){ 
+   i=document.getElementById('keyboard').getElementsByTagName('input');
+for(c=0;c<i.length;c++) {
+if(i[c].type==='button') {
+   i[c].addEventListener('onclick',makeClickHandler(c));
+   }
+  }
+document.getElementById('clear').onclick = function() {
+   document.getElementById('text').value='';
+  }
+ }
+
+function makeClickHandler(c) {
+   i[c].onclick=function() {
+   document.getElementById('text').value +=this.value.toLowerCase();
+  };
+ }
+
+   window.addEventListener?
+   window.addEventListener('load',init,false):
+   window.attachEvent('onload',init);
+})();
+</script>
+
+</head>
+<body>
+<center>
+<div id="keyboard">
+
+<div>
+<input id="text" type="text" readonly="readonly"></br>
+<div>
+ <input type="button" value="1">
+ <input type="button" value="2">
+ <input type="button" value="3">
+ <input type="button" value="4">
+ <input type="button" value="5">
+ <input type="button" value="6">
+ <input type="button" value="7">
+ <input type="button" value="8">
+ <input type="button" value="9">
+ <input type="button" value="0">
+ </div><div>
+ <input type="button" value="Q">
+ <input type="button" value="W">
+ <input type="button" value="E">
+ <input type="button" value="R">
+ <input type="button" value="T">
+ <input type="button" value="Y">
+ <input type="button" value="U">
+ <input type="button" value="I">
+ <input type="button" value="O">
+ <input type="button" value="P">
+</div><div>
+ <input type="button" value="A">
+ <input type="button" value="S">
+ <input type="button" value="D">
+ <input type="button" value="F">
+ <input type="button" value="G">
+ <input type="button" value="H">
+ <input type="button" value="J">
+ <input type="button" value="K">
+ <input type="button" value="L">
+</div><div>
+ <input type="button" value="Z">
+ <input type="button" value="X">
+ <input type="button" value="C">
+ <input type="button" value="V">
+ <input type="button" value="B">
+ <input type="button" value="N">
+ <input type="button" value="M">
+</div><div>
+ <input id="space" type="button" value=" ">
+ <input id="clear" type="reset" value="Clear">
+</div><div>
+
+</div>
+
+</div><!-- end #keyboard -->
+</center>
+</body>
+</html>
